# levelfour

./: Attributions.md  GenProject.bat  L4AE.md  L4G.md  L4TK.md  ProjectHome.md  RoadMap.md  VTK.pri  ViewRecipeTests.md
app/plugins/nodes/3d/AdvancedRender/: AdvancedRenderNodePlugin.cpp  CMakeLists.txt
app/plugins/nodes/Agent/RandomBlink/: CMakeLists.txt  RandomBlinkNode.cpp  RandomBlinkNode.h  RandomBlinkNodePlugin.h
app/plugins/nodes/Compositing/SimpleBlend/: CMakeLists.txt  SimpleBlendNode.cpp
app/plugins/nodes/Input/WiiTracker/: CMakeLists.txt  WiiTrackerNode.cpp  WiiTrackerNodePlugin.cpp  wiitracker.xml
app/plugins/nodes/Npr/AqtFilterMorphologicalSmooth/: CMakeLists.txt
app/plugins/nodes/Shading/AmbientOcclusion/: AmbientOcclusionNode.cpp  AmbientOcclusionNodePlugin.cpp  CMakeLists.txt
app/plugins/nodes/catalog/mappers/ColorByValue/: CMakeLists.txt  ColorByValueNodePlugin.cpp
app/plugins/nodes/catalog/mappers/ShapeMapper/: CMakeLists.txt  ShapeMapperNode.cpp  ShapeMapperNode.h  shapeMapper.xml
app/plugins/nodes/catalog/mappers/SizeMapper/: CMakeLists.txt  sizeMapper.xml
app/plugins/nodes/catalog/operators/data/MergeColumns/: CMakeLists.txt  MergeColumnsNode.cpp  MergeColumnsNodePlugin.cpp
branches/dev/app/: CMakeLists.txt  start_commit_hook.py
branches/dev/app/applications/: CMakeLists.txt
branches/dev/app/applications/Acuity4D/: Application.cpp  CMakeLists.txt
branches/dev/app/applications/levelfour/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  main.qrc
branches/dev/app/core/: AbstractMapParameter.h  AbstractParameter.cpp  AbstractParameter.h  AnimatableNode.h  BaseRectItem.cpp  CMakeLists.txt  CompositorNode.cpp  CompositorNode.h  Connection.cpp  Connection.h  ConnectionGraphicsItem.cpp  ConnectionGraphicsItem.h  CurveEditorDataNode.cpp  EnumerationParameter.cpp  FilenameParameter.cpp  FilenameParameter.h  FlagGraphicsItem.cpp  FlagGraphicsItem.h  FrapperPrerequisites.h  GenericParameter.h  GeometryNode.h  Helper.h  ImageNode.cpp  ImageNode.h  InstanceCounterMacros.h  Key.cpp  Key.h  Log.cpp  MaterialMapParameter.cpp  MaterialMapParameter.h  MotionDataNode.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  NodeModel.cpp  NodeModel.h  NodeType.cpp  (+47 more)
branches/dev/app/gui/: BaseGraphicsView.cpp  BaseGraphicsView.h  CMakeLists.txt  Controller.h  CopyHandler.h  CurveEditorGraphicsView.h  CurveEditorPanel.h  CurveEditorPanel.ui  DocumentationPanel.cpp  GrabberWidget.cpp  GrabberWidget.h  GraphicsView.cpp  HierarchyPanel.cpp  HierarchyPanel.h  HistoryPanel.cpp  HistoryPanel.h  HistoryPanel.ui  LogPanel.cpp  LogPanel.h  LogPanel.ui  NetworkGraphicsView.cpp  NetworkPanel.cpp  NetworkPanel.ui  Panel.cpp  Panel.h  PanelFactory.cpp  PanelFactory.h  PanelFrame.cpp  PanelFrame.ui  PanelTypeInterface.h  ParameterPanel.cpp  ParameterPanel.h  ParameterTabPage.cpp  ParameterTabPage.h  SegmentGraphicsItem.cpp  SegmentGraphicsItem.h  TimelineGraphicsItem.cpp  TimelinePanel.cpp  TimelinePanel.h  TimelinePanel.ui  (+20 more)
branches/dev/app/plugins/: CMakeLists.txt
branches/dev/app/plugins/nodes/: CMakeLists.txt
branches/dev/app/plugins/nodes/Agent/: CMakeLists.txt
branches/dev/app/plugins/nodes/Compositing/: CMakeLists.txt
branches/dev/app/plugins/nodes/Vis/: CMakeLists.txt
branches/dev/app/plugins/nodes/catalog/: CMakeLists.txt
branches/dev/app/plugins/panels/: CMakeLists.txt
branches/dev/app/plugins/panels/ListViewPanel/: CMakeLists.txt  ListViewPanel.cpp  ListViewPanel.h  ListViewPanelPlugin.h
branches/dev/app/plugins/panels/NodeTreePanel/: CMakeLists.txt  NodeTreePanel.cpp  NodeTreePanel.h
branches/dev/app/plugins/panels/PatternExplorerPanel/: CMakeLists.txt  PatternExplorerPanel.cpp  PatternExplorerPanel.h  PatternExplorerPanel.ui  PatternExplorerPanelPlugin.cpp  PatternExplorerPanelPlugin.h
branches/dev/app/plugins/panels/Scripter/: CMakeLists.txt  Scripter.cpp  ScripterPlugin.h
branches/dev/app/plugins/panels/TableViewPanel/: CMakeLists.txt  TableViewPanel.cpp  TableViewPanel.h  TableViewPanel.ui  TableViewPanel.xml  ui_TableViewPanel.h
branches/dev/app/plugins/panels/TreeViewPanel/: CMakeLists.txt  TreeViewPanel.cpp  TreeViewPanel.h  TreeViewPanel.ui  TreeViewPanel.xml
branches/dev/app/plugins/widgets/universalGraph/: CMakeLists.txt  universalGraph.cpp  universalGraph.xml  universalGraphPlugin.h
branches/dev/app/resources/: main.qrc  resource.rc
branches/dev/app/resources/styles/: levelfour.qss
branches/dev/nodekits/: CMakeLists.txt
branches/dev/nodekits/plugins/nodes/: CMakeLists.txt
branches/dev/nodekits/plugins/nodes/Test/: CMakeLists.txt  TestNodePlugin.cpp
branches/dev/nodekits/plugins/panels/ListViewPanel/: ListViewPanel.cpp  ListViewPanel.h  ListViewPanel.xml  ListViewPanelPlugin.h
branches/dev/nodekits/plugins/panels/PatternExplorerPanel/: PatternExplorerPanel.cpp  PatternExplorerPanel.h  PatternExplorerPanel.xml  PatternExplorerPanelPlugin.h
branches/dev/nodekits/plugins/panels/TableViewPanel/: TableViewPanel.h  TableViewPanelPlugin.cpp
branches/dev/nodekits/plugins/panels/TestPanel/: CMakeLists.txt  TestPanel.cpp  TestPanel.xml  TestPanelPlugin.cpp
branches/dev/nodekits/plugins/panels/TreeViewPanel/: TreeViewPanel.cpp  TreeViewPanel.h
branches/dev/nodekits/plugins/widgets/: CMakeLists.txt
nodekits/: CMakeLists.txt
nodekits/plugins/: CMakeLists.txt
nodekits/plugins/nodes/Note/: NoteNode.h  NoteNodePlugin.h
nodekits/plugins/nodes/Test/: CMakeLists.txt  TestNode.h  TestNodePlugin.h
nodekits/plugins/panels/: CMakeLists.txt
nodekits/plugins/panels/ListViewPanel/: ListViewPanelPlugin.cpp
nodekits/plugins/panels/PatternExplorerPanel/: PatternExplorerPanel.cpp  PatternExplorerPanel.h
nodekits/plugins/panels/TableViewPanel/: TableViewPanel.cpp  TableViewPanelPlugin.h
nodekits/plugins/panels/TestPanel/: TestPanelPlugin.h
nodekits/plugins/panels/TreeViewPanel/: TreeViewPanelPlugin.cpp  TreeViewPanelPlugin.h
nodekits/plugins/widgets/: CMakeLists.txt
nodekits/plugins/widgets/Test/: CMakeLists.txt
(+3133 files in other folders)
