project(graph)

add_subdirectory(Clustering)
add_subdirectory(Community)
add_subdirectory(Constrained)
#add_subdirectory(DigCola)
#add_subdirectory(FM3)
add_subdirectory(ForceDirected)
add_subdirectory(FruchtermanReingold)
#add_subdirectory(GraphEmbedder)
#add_subdirectory(HDE)
#add_subdirectory(IPSepCoLA)
#add_subdirectory(KamadaKawai)
#add_subdirectory(Orthogonal)
add_subdirectory(Random)
#add_subdirectory(SimulatedAnnealing)
add_subdirectory(SingleCycle)
#add_subdirectory(Spherical)
#add_subdirectory(SpringEades)
#add_subdirectory(Sugiyama)
add_subdirectory(ThreeDCircles)
#add_subdirectory(TutteEmbedding)