project(compositors)

add_subdirectory(BadPrinting)
add_subdirectory(BleachBypass)
add_subdirectory(Bloom)
add_subdirectory(CameraShake)
add_subdirectory(Corona)
add_subdirectory(DropShadow)
add_subdirectory(EdgeDetect)
add_subdirectory(Kuwahara)
add_subdirectory(LineDraw)
add_subdirectory(Negative)
add_subdirectory(NegativeOffset)
add_subdirectory(NightVision)
add_subdirectory(Posterize)
add_subdirectory(ScratchedFilm)
add_subdirectory(Sepia)
add_subdirectory(Tiles)

